<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/response" />

        <TextView
            android:id="@+id/work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_work"
            tools:text="example" />

        <TextView
            android:id="@+id/photoHash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo_hash"
            tools:text="example" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_date"
            tools:text="example" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/time"
        tools:text="example" />
</androidx.appcompat.widget.LinearLayoutCompat>
