<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/namesSpinner"
            android:layout_width="200dp"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_a_password" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password" />

        <Button
            android:id="@+id/enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <include
        android:id="@+id/loading"
        layout="@layout/loading" />
</androidx.constraintlayout.widget.ConstraintLayout>
